'更改配置文件'